--- a/alquimia-front/src/app/components/verificador-precio/verificador-precio.html
+++ b/alquimia-front/src/app/components/verificador-precio/verificador-precio.html
@@ -19,7 +19,6 @@
     </div>
 
     <div class="w-full max-w-lg mb-6 relative" *ngIf="!mostrarCamara">
-        
         <button 
             (click)="toggleCamara()"
             class="w-full mb-4 bg-slate-800 hover:bg-slate-700 text-white py-4 rounded-xl font-bold text-lg shadow-lg flex items-center justify-center gap-2 active:scale-95 transition-transform"
@@ -65,7 +64,7 @@
                 {{ producto.nombre }}
             </h1>
             <p class="text-slate-400 mt-2 font-mono text-lg">
-                {{ producto.codigo_barra }} | {{ producto.categoria || 'General' }}
+                {{ producto.codigo_barra }} | {{producto.codigo_proveedor}} | {{ producto.categoria || 'General' }}
             </p>
         </div>
 
@@ -73,6 +72,7 @@
             <div class="p-8 text-center bg-emerald-50/50">
                 <span class="inline-block px-3 py-1 bg-emerald-100 text-emerald-800 rounded-full text-xs font-bold uppercase tracking-wide mb-3">Efectivo</span>
                 <div class="text-5xl font-bold text-emerald-600 font-mono tracking-tighter">{{ producto.precio_efectivo | currency:'ARS':'symbol-narrow':'1.0-0' }}</div>
+                <p class="text-emerald-800/60 text-sm mt-2 font-medium">{{ descuentoEfectivo }}% Descuento</p>
             </div>
             
             <div class="p-8 text-center bg-blue-50/50">
